--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,35 @@
     background-color: black;
     text-align: center;
 }
+
+h1{
+    color: white;
+    font-weight: normal;
+    font-size: 50px;
+    text-align: center;
+}
+h2{
+    color:  white;
+    font-size: 42px;
+    font-weight: 300;
+
+}
+p{
+    color: gray;
+    font-size: 21px;
+}
+.copy{
+    color: gray;
+    text-align: right;
+}
+
+.download{
+    color: aquamarine;
+    font-size: 16px;
+}
+.video{
+    margin-top: 25px;
+}
+.logo{
+    margin-top: 25px;
+}
